--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,44 @@ body {
     text-decoration: none;
 }
 .list{
-    list-style: none
+ list-style: none;
+ padding: 0;
+ margin: 0;
+}
+h1,h2,h3,h4,h5,h6,p{
+    margin: 0;
+}
+img{
+    display: block;
+}
+/*base styles*/
+.container { 
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px; 
+    margin-left: auto; 
+    margin-right: auto;  
+
+}
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 /*Header section*/
+.header{
+border: 1px solid #ECECEC;    
+}
+.header-container{
+ display: flex;
+ align-items: center;
+ 
+}
+ .header-nav, .header-list,.header-contacts {
+    display: flex;
+}
+.header-nav{
+ margin-right: auto;
+}
 .logo{
 font-family: var(--secondary-font);
 font-weight: 700;
@@ -30,16 +65,29 @@ font-size: 26px;
 line-height: 1.19;
 color: #000;
 }
+.logo-header{
+ margin-right: 93px;
+padding-top: 32px;
+padding-bottom: 32px;
+}
 .logo-item{
 color: var(--accent-color);
 }
+.header-list,.header-contacts {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    gap: 50px;
+    align-items: center;
+}
 .header-link,
 .contact-link{
+ display: block;
  font-weight: 500;
  line-height: 1.14;
  letter-spacing: 0.02em;
  color: var(--title-text-color);
 }
+
 .header-link:hover,
 .header-link:focus,
 .contact-link:hover,
@@ -49,15 +97,21 @@ color: var(--accent-color);
 .header-link-current{
  color: var(--accent-color);
 }
+
 .contact-link {
  color: var(--primary-text-color);
 }
 
 /*Hero section*/
 .hero {
+ text-align: center;
  background-color: var(--dark-bg-color);
+ 
 }
 .main-title {
+   min-width: 696px;
+    min-height: 120px;
+    margin-bottom: 30px;
  font-weight: 900;
  font-size: 44px;
  line-height: 1,36;
@@ -66,21 +120,36 @@ color: var(--accent-color);
  color: var(--primary-white-color);
 }
 .hero-btn{
+    display: inline-block;
+    min-width: 200px;
+    min-height: 50px;
+    
+    padding: 10px 32px;
  font-family: inherit;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.87;
- display: flex;
  letter-spacing: 0.06em;
  color: var(--primary-white-color);
  background-color: var(--accent-color);
  cursor: pointer;
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+ border-radius: 4px;
+
 }
 .hero-btn:hover,
 .hero-btn:focus{
  background-color: #188CE8;
 }
 /*Features section*/
+.features-list{
+    display: flex;
+    gap: 30px;
+    
+}
+.features-item{
+    flex-basis: 270px;
+}
 
 .features-subtitle{
  font-weight: 700;
@@ -96,15 +165,38 @@ color: var(--accent-color);
 /*Services section*/
 
 .section-title{
+    margin-bottom: 50px;
  font-weight: 700;
  font-size: 36px;
  line-height: 1.16;
  text-align: center;
  color: var(--title-text-color);
 }
-/*Team section*/
+.services-list{
+    display: flex;
+    gap: 30px;
+}
 
+/*Team section*/
+.team{
+background-color:#F5F4FA;
+}
+.team-list{
+ display: flex;
+ gap: 30px;
+}
+.team-item{
+ flex-basis: calc(100%-3*30px/ 4);
+ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-wrapper{
+padding: 30px 59px;
+}
 .team-subtitle{
+ margin-bottom: 10px;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.18;
@@ -119,14 +211,33 @@ color: var(--accent-color);
 }
 
 /*Portfolio*/
-
+.vizually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    overflow: hidden;
+}
+.portfolio-filters{
+    display: flex;
+    gap: 8px;
+    margin-bottom: 50px;
+    justify-content: center;
+}
+ 
 .filter-btn{
+ padding: 6px 22px ;
  font-family: inherit;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.62;
  color: var(--title-text-color);
  background-color: #F5F4FA;
+ border-radius: 4px;
  cursor: pointer;
 }
 .filter-btn-current{
@@ -136,7 +247,25 @@ color: var(--accent-color);
 .filter-btn:focus{
 background-color: var(--accent-color);
 }
+.portfolio-gallery-list{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+    /*gap: 30px;*/
+}
+.gallery-item{
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+}
+.gallery-wrapper{
+ border: 1px solid #EEEEEE;
+ border-top: none;
+ padding: 20px 24px;
+}
 .gallery-subtitle{
+ margin-bottom: 4px;
  font-weight: 700;
  font-size: 18px;
  line-height: 2;
@@ -151,9 +280,15 @@ background-color: var(--accent-color);
 /*Footer section*/
 
 .footer{
+
+ padding-top: 60px;
+ padding-bottom: 60px;
  background-color: var(--dark-bg-color);
 }
-.logo-footer{
+.container-adres{
+    margin-top: 20px;
+}
+.logo-footer-white{
     color: var(--primary-white-color);
 }
 .footer-addres,
@@ -164,6 +299,7 @@ background-color: var(--accent-color);
  line-height: 1.7;
  color: var(--primary-white-color);
 }
+
 .footer-mail,
 .footer-phone{
     color: rgba(255, 255, 255, 0.6);
